# ListTransformer

./: .gitignore  LICENSE  README.md  requirements.txt
ListTransformer/: ListTransformer.py  README.md  __init__.py  enums.py  pyproject.toml
docs/: conf.py  index.rst
docs/examples/: combine.rst  difference.rst  intersection.rst  lister.rst  lol.md  str_list.rst
docs/source/: conf.py  index.rst
examples/: combine.py  difference.py  intersection.py  lister.py  str_list.py
lister/: README.md  __init__.py  lister.py  pyproject.toml
py_lister/: __init__.py  py_lister.py  pyproject.toml
